acm-root/namespaces/tif/dev/tif-gateway-dev-asm/grafana-vs-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs-dev
  annotations:
    configmanagement.gke.io/cluster-selector: tif-dev-clusters
spec:
  hosts:
  - "askdemocluster1.feiaz.ferguson.com"
  gateways:
  - tif-gateway-dev/internal-asm-gateway-dev
  http:
  - match:
    - uri:
        prefix: "/grafana/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 3000
        host: grafana.istio-system.svc.cluster.local
