acm-root/namespaces/tif/dev/tif-gateway-dev-asm/kiali-vs-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs-dev
  annotations:
    configmanagement.gke.io/cluster-selector: tif-dev-clusters
spec:
  hosts:
  - "askdemocluster1.feiaz.ferguson.com"
  gateways:
  - tif-gateway-dev/internal-asm-gateway-dev
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
