acm-root/namespaces/tif/dev/tif-gateway-dev-asm/prometheus-vs-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs-dev
  annotations:
    configmanagement.gke.io/cluster-selector: tif-dev-clusters
spec:
  hosts:
  - "askdemocluster1.feiaz.ferguson.com"
  gateways:
  - tif-gateway-dev/internal-asm-gateway-dev
  http:
  - match:
    - uri:
        prefix: "/prometheus/"
    rewrite:
      uri: "/"
 
    route:
    - destination:
        port:
          number: 9090
        host: prometheus.istio-system.svc.cluster.local
